--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "doit",
   "version": "1.0.0",
   "description": "A nodejs API for the doit application",
-  "main": "index.js",
+  "main": "app.js",
   "engines":{
     "node":"12.13.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "NODE_ENV=production MONGO_USER=bolarinwa  MONGO_PASSWORD =JAlbZjlfi6P18f62  MONGO_DEFAULT_DATABASE=doit MESSAGE_KEY=Bw7YIC0EGO21xK8g9DvrciPd node app.js",
+    "start-server":"node app.js",
+    "start:dev" : "nodemon app.js"
+
   },
   "repository": {
     "type": "git",
