--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_ENV=production MONGO_USER=bolarinwa  MONGO_PASSWORD =JAlbZjlfi6P18f62  MONGO_DEFAULT_DATABASE=doit MESSAGE_KEY=Bw7YIC0EGO21xK8g9DvrciPd node app.js",
+    "start": "node app.js",
     "start-server":"node app.js",
     "start:dev" : "nodemon app.js"
     
